// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the YoastTabs matches the snapshot 1`] = `
.c0 {
  font-size: 1em;
}

.c0 .react-tabs__tab-list {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  list-style: none;
  padding: 0;
  margin: 0;
  border-bottom: 4px solid #f1f1f1;
}

.c0 .react-tabs__tab {
  -webkit-flex: 0 1 200px;
  -ms-flex: 0 1 200px;
  flex: 0 1 200px;
  text-align: center;
  margin: 0 16px;
  padding: 16px 0;
  cursor: pointer;
  font-family: "Open Sans",sans-serif;
  font-size: 1.5em;
  line-height: 1.33333333;
  font-weight: 200;
  color: #555;
  text-transform: none;
}

.c0 .react-tabs__tab.react-tabs__tab--selected {
  box-shadow: 0 4px 0 0 #a4286a;
}

.c0 .react-tabs__tab-panel {
  display: none;
  padding: 24px 40px;
}

.c0 .react-tabs__tab-panel:focus {
  outline: none;
}

.c0 .react-tabs__tab-panel.react-tabs__tab-panel--selected {
  display: block;
}

@media screen and ( max-width:768px ) {
  .c0 .react-tabs__tab-panel {
    padding: 16px 16px;
  }
}

<div
  className="c0"
>
  <div
    className="react-tabs"
    data-tabs={true}
    onClick={[Function]}
    onKeyDown={[Function]}
  >
    <ul
      className="react-tabs__tab-list"
      role="tablist"
    >
      <li
        aria-controls="react-tabs-1"
        aria-disabled="false"
        aria-selected="true"
        className="react-tabs__tab react-tabs__tab--selected"
        id="react-tabs-0"
        role="tab"
        tabIndex="0"
      >
        tab1
      </li>
      <li
        aria-controls="react-tabs-3"
        aria-disabled="false"
        aria-selected="false"
        className="react-tabs__tab"
        id="react-tabs-2"
        role="tab"
        tabIndex={null}
      >
        tab2
      </li>
      <li
        aria-controls="react-tabs-5"
        aria-disabled="false"
        aria-selected="false"
        className="react-tabs__tab"
        id="react-tabs-4"
        role="tab"
        tabIndex={null}
      >
        tab3
      </li>
    </ul>
    <div
      aria-labelledby="react-tabs-0"
      className="react-tabs__tab-panel react-tabs__tab-panel--selected"
      id="react-tabs-1"
      role="tabpanel"
      tabIndex="0"
    >
      <p>
        This is some content for tab 1. 
        <a
          href="#"
        >
          focusable element 1
        </a>
      </p>
    </div>
    <div
      aria-labelledby="react-tabs-2"
      className="react-tabs__tab-panel"
      id="react-tabs-3"
      role="tabpanel"
      tabIndex="0"
    />
    <div
      aria-labelledby="react-tabs-4"
      className="react-tabs__tab-panel"
      id="react-tabs-5"
      role="tabpanel"
      tabIndex="0"
    />
  </div>
</div>
`;

exports[`the YoastTabs with props matches the snapshot 1`] = `
.c0 {
  font-size: 1em;
}

.c0 .react-tabs__tab-list {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  list-style: none;
  padding: 0;
  margin: 0;
  border-bottom: 4px solid #f1f1f1;
}

.c0 .react-tabs__tab {
  -webkit-flex: 0 1 300px;
  -ms-flex: 0 1 300px;
  flex: 0 1 300px;
  text-align: center;
  margin: 0 16px;
  padding: 16px 0;
  cursor: pointer;
  font-family: "Open Sans",sans-serif;
  font-size: 2em;
  line-height: 1.33333333;
  font-weight: 600;
  color: #0f0;
  text-transform: uppercase;
}

.c0 .react-tabs__tab.react-tabs__tab--selected {
  box-shadow: 0 4px 0 0 #a4286a;
}

.c0 .react-tabs__tab-panel {
  display: none;
  padding: 24px 40px;
}

.c0 .react-tabs__tab-panel:focus {
  outline: none;
}

.c0 .react-tabs__tab-panel.react-tabs__tab-panel--selected {
  display: block;
}

@media screen and ( max-width:768px ) {
  .c0 .react-tabs__tab-panel {
    padding: 16px 16px;
  }
}

<div
  className="c0"
>
  <div
    className="react-tabs"
    data-tabs={true}
    onClick={[Function]}
    onKeyDown={[Function]}
  >
    <ul
      className="react-tabs__tab-list"
      role="tablist"
    >
      <li
        aria-controls="react-tabs-7"
        aria-disabled="false"
        aria-selected="true"
        className="react-tabs__tab react-tabs__tab--selected"
        id="react-tabs-6"
        role="tab"
        tabIndex="0"
      >
        tab1
      </li>
      <li
        aria-controls="react-tabs-9"
        aria-disabled="false"
        aria-selected="false"
        className="react-tabs__tab"
        id="react-tabs-8"
        role="tab"
        tabIndex={null}
      >
        tab2
      </li>
      <li
        aria-controls="react-tabs-11"
        aria-disabled="false"
        aria-selected="false"
        className="react-tabs__tab"
        id="react-tabs-10"
        role="tab"
        tabIndex={null}
      >
        tab3
      </li>
    </ul>
    <div
      aria-labelledby="react-tabs-6"
      className="react-tabs__tab-panel react-tabs__tab-panel--selected"
      id="react-tabs-7"
      role="tabpanel"
      tabIndex="0"
    >
      <p>
        This is some content for tab 1. 
        <a
          href="#"
        >
          focusable element 1
        </a>
      </p>
    </div>
    <div
      aria-labelledby="react-tabs-8"
      className="react-tabs__tab-panel"
      id="react-tabs-9"
      role="tabpanel"
      tabIndex="0"
    />
    <div
      aria-labelledby="react-tabs-10"
      className="react-tabs__tab-panel"
      id="react-tabs-11"
      role="tabpanel"
      tabIndex="0"
    />
  </div>
</div>
`;
